# Stromkalkulator

./: .anonymize_config.example.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.en.md  README.md  SECURITY.md  UTILITY_METER_PLAN.md  codecov.yml  hacs.json  justfile  pyproject.toml  vulture_whitelist.py
.dogcats/: config.toml  issues.jsonl
.forgejo/issue_template/: faktura-verifisering.md
.github/ISSUE_TEMPLATE/: faktura-verifisering.md  hacs_submission.md
.github/workflows/: ci.yml  fri-nettleie-sjekk.yml  hacs-check.yml  hassfest.yml  release.yml  validate.yml
Måleverdier/: README.md  elhub_april.csv  elhub_desember_2025.csv  elhub_februar_2026.csv  elhub_januar_2026.csv  elhub_mars_2026.csv
custom_components/nettleie/: config_flow.py  coordinator.py  manifest.json  sensor.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  RELEASE_NOTES.md  SENSORS.en.md  SENSORS.md  TESTING.md  begrensninger.md  beregninger.md  contributing.md  development.md  domain-rules.md  fakturaverifisering-prosjekt.md  forum-followup-2026-05.md  input-sensorer.md  måler-hardware.md  release-draft.md  release-notes.md  sensorer.md  sensors.en.md  test-coverage-gaps.md  testing.md  visjon.md
docs/fakturaer/: REFERANSE.md  (+18 more)
scripts/: anonymize_invoices.py  convert_pdfs.py  sjekk_mot_fri_nettleie.py
tests/: conftest.py  test_akkumulert_kostnad.py  test_avgifter.py  test_binary_sensor.py  test_boligtype.py  test_button.py  test_config_flow.py  test_config_flow_options.py  test_config_migration.py  test_coordinator_replay.py  test_coordinator_robustness.py  test_coordinator_sensor_contract.py  test_coordinator_update.py  test_coverage_gaps.py  test_diagnostics.py  test_dry_helpers.py  test_dso_data_validation.py  test_dso_migration.py  test_dso_tariffer_2026.py  test_dst_overgang.py  test_edge_cases.py  test_eksport.py  test_energiledd.py  test_energiledd_perioder.py  test_energy_sensor_delta.py  test_faktura_bkk.py  test_faktura_februar_2026.py  test_faktura_hourly_snapshot.py  test_faktura_mars_2026.py  test_faktura_validering.py  test_faktura_validering_nye_felter.py  test_init_setup.py  test_kapasitetstrinn.py  test_margin_neste_trinn.py  test_month_transition_integration.py  test_monthly_sensors.py  test_norgespris.py  test_norgespris_akkumulert.py  test_norgespris_compensation_tak.py  test_offentlige_avgifter_sensor.py  (+17 more)
(+90 files in other folders)
