[project]
name = "stromkalkulator"
version = "1.13.0"
description = "Home Assistant integration for Norwegian electricity cost calculation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
    "vulture>=2.13",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    "mypy>=1.8.0",
    # Kun for tests/test_smoke_ha.py (ekte-HA røyktest). Trekker inn homeassistant
    # og et helt pytest-oppsett. Kjøres isolert i CI-jobben `smoke-ha`, ikke i
    # den ordinære pipx-suiten (som mocker bort HA).
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.stromkalkulator"]

[tool.ruff.lint.per-file-ignores]
# Røyktesten må legge repo-roten på sys.path FØR den importerer homeassistant og
# custom_components (kjøres med --noconftest, så tests/conftest.py setter det
# ikke). Det tvinger imports under en kodelinje (E402). HomeAssistant importeres
# kun for type-hints (TC002), men holdes som vanlig import for lesbarhet.
"tests/test_smoke_ha.py" = ["E402", "TC002"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components/stromkalkulator"]
exclude = ["*test*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # Ignorer Home Assistant imports som ikke er installert lokalt
files = ["custom_components/stromkalkulator"]
exclude = ["tests"]
